--- a/구단 역사.html
+++ b/구단 역사.html
@@ -97,8 +97,40 @@
   시작했다. 그리고 1994-95 시즌부터 호마리우, 스토이치코프, 라우드루프 등 스타 플레이어들이 차례로 타 팀으로 이적하면서 '드림팀'은 와해되었다. 이렇게 스타 플레이
   어들이 떠나자 크루이프와 바르셀로나도 함께 몰락했다. 1995-96 시즌까지 두 시즌 동안 계속 실패를 거둔 크루이프 감독은 결국 누녜스 회장과 갈등 끝에 팀을 떠났다.</p>
   <p>1996년 크루이프를 경질한 누녜스 회장은 후임으로 바비 롭슨을 새 감독으로 영입했고, 동시에 호나우두와 루이스 엔리케를 영입했다. 1999년, 바르셀로나는 기나
-    긴 시간 끝에 마침내 클럽 창단 100 주년을 기록하게 된다. 
-  </p>
+    긴 시간 끝에 마침내 클럽 창단 100 주년을 기록하게 된다. 반면 1997년에 누녜스 회장은 호나우두 원맨팀이 된 팀에 만족하지 않아 시즌 후 롭슨 감독을 총감독으로
+   추대시키고, 호나우두를 인테르로 내보냈다. 대신 AFC 아약스에서 주가를 올리던 루이 판할 감독을 선임했다. 판할 감독은 아약스 때 제자인 파트릭 클라위버르트와 
+   프랑크 더부르, 필립 코퀴 등을 영입하고 또다른 브라질 스타 히바우두도 영입했으며, 루이스 피구와 루이스 엔리케의 기량도 더 끌어올렸다. 이에 따라 1997-98 및 
+   1998-99 시즌 연속으로 프리메라리가를 제패했고, 1999-00 시즌에는 트레블 후보로도 거론됐으나 시즌 중반 들어 선수진과 감독 사이에 불화 등 온갖 문제가 터져 
+   트레블은 물건너갔다.</p>
+     <p>결국 1999-00시즌 후 누녜스 회장과 판할 감독이 동시에 물러났고, 조안 가스파르트가 새 회장으로 선출되었다. 하지만 구단과 불화를 보이던 
+   팀의 상징 루이스 피구가 레알 마드리드로 이적하는 충격적인 사건이 벌어지며 팬들의 가슴에 비수가 꽂혔다. 팀의 에이스였던 피구마저 나가자 팀의 전력은 크게 
+      약화되었고, 2000년대 초반 동안 바르셀로나는 3년간 무관 상태에 머무는 침체기에 빠져들었다.</p>
+     <li><p id="2002">결국 2002년에는 판할 감독을 다시 부르고, 후안 로만 리켈메를 영입했다. 하지만 당시 바르셀로나에서 그나마 사람 구실하던 히바우두는 악연인
+      판할이 오자 즉각 팀을 떠났다. 이렇게 어수선한 분위기 속에서 시작된 2002-03시즌에서 바르셀로나는 라리가에서 16위까지 떨어지는 최악의 경기력을 보였고, 
+      결국 시즌 도중 판할 감독이 경질되었고, 가스파르트 회장도 사임했다. 이후 라도미르 안티치가 땜빵으로 감독을 맡았고, 팀은 6위로 시즌을 마무리하며 챔스 출전이
+      불발되었다. 2003년 조안 라포르타가 회장으로 선출되어 전 네덜란드 국대 감독 프랑크 레이카르트를 선임하였고, 파리 생제르맹 FC에서 활약하던 당대 최고의 
+      브라질리언 스타 호나우지뉴를 영입했다.</p>
+       <p>2004-05시즌에는 아르헨티나의 샛별 리오넬 메시도 1군에 데뷔했다. 이에 힘 입어 2005-06시즌, UEFA 챔피언스 리그 정상에 오르게 된다. 유러피언 컵에서 UEFA 
+      챔피언스 리그로 개편된 뒤 처음으로 우승 타이틀을 거머쥐게 된다. UEFA 챔피언스 리그뿐 아니라 모든 대회에서 좋은 성적을 거두기 시작하며 메가 클럽으로 거듭
+      나기 시작한다. 2006년에는 전 세계 축구 사상 처음으로 기업이 아닌 공익 기구, 유니세프와 계약을 맺게 된다. 그러나 2005-06시즌 이후 레이카르트 감독의 선수단
+      장악력이 약해지고 호나우지뉴와 데쿠에게 검은 양 사건으로 대표되는 사생활 및 자기관리 실패 문제가 생기면서 팀은 침체기에 빠져 2시즌 간 무관을 기록했다. 
+     이에 따라 레이카르트 감독을 경질하고 펩 과르디올라를 새 감독으로 선임하였다. 또한 호나우지뉴와 데쿠를 이적시키면서 이제 팀의 중심은 메시에게 넘어가게 된다.</p>
+     <p>2008년, 펩 과르디올라가 바르셀로나 1군 감독으로 부임하면서 최전성기가 시작된다. FC 바르셀로나 B에서 승격된 감독인 만큼 라 마시아 데 칸 플라네스를 적극적으로
+      활용하였으며 카를레스 푸욜, 빅토르 발데스, 차비 에르난데스, 안드레스 이니에스타, 리오넬 메시, 세르지오 부스케츠, 제라르 피케가 팀의 주축이 되어 펩의 티키타카
+      전술을 수행하면서 스페인 팀 역사상 처음으로 트레블을 달성하게 된다. 이 시즌부터 메시가 신으로 거듭나게 되며 시즌 종료 이후 2009 발롱도르의 주인공이 된다.
+      이전 시즌의 기세를 이어 받아 2009-10 시즌에 UEFA 슈퍼컵, 수페르코파 데 에스파냐, FIFA 클럽 월드컵에서 우승하며 전 세계 최초로 6관왕을 달성하게 된다. 
+      UEFA 챔피언스 리그는 4강에서 인터 밀란에게 패했으나 2연속 라리가 우승에 성공했다.</p>
+      <p>2010-11 시즌에는 성적과 별개로 축구사 역사상 가장 강력한 팀으로 평가 받는 팀이 완성되었다. 펩 과르디올라 감독이 2시즌 동안 티키타카 전술을 녹이려 끝
+       없이 노력했고 이 시즌이 되어서 클럽에 완벽히 녹아들며 그 어느 팀도 바르셀로나를 이길 수 없다는 인식이 박힐 정도로 최고의 시즌을 보내게 된다. 
+       코파 델 레이에서의 준우승을 제외하고 모든 대회에서 우승하며 완벽한 팀으로 거듭난다. 2011- 12시즌에는 전 시즌의 기세를 쭉쭉 이어가며 UEFA 슈퍼컵, 
+       수페르코파 데 에스파냐, FIFA 클럽 월드컵에서 나란히 우승을 차지하며 또 한번 역대급의 시즌을 쓸 것으로 예상했으나 지난 시즌의 임팩트가 너무 강렬했던 것인지
+       후반기로 갈수록 리그에서 점점 밀리는 모습을 보여주며 라 리가 2위, UEFA 챔피언스 리그 4강 탈락으로 시즌을 마감하게 된다. 다행히 코파 델 레이에서는 우승하였고
+       이 시즌 리오넬 메시는 다시 한번 미친 듯한 모습을 보여주며 60경기 73골 29도움을 기록하며 구단 공격 포인트 기록을 무수히 갈아치운다. 그리고 이 시즌을 
+       마지막으로 펩 과르디올라 감독이 팀을 떠나게 된다.</p>
+      <p>12-13시즌 시작과 동시에 티토 빌라노바가 감독으로 부임하면서 기존의 티키타카 전술에서 역습 위주의 전술로 탈 바꿈 하게 된다. 하지만 갑작스러운 전술의 
+       변화 때문이었는지 UEFA 챔피언스 리그 4강에서 당시 전성기를 달리고 있던 FC 바이에른 뮌헨에게 합산 스코어 0:7이라는 충격적인 스코어로 탈락하게 된다. 
+       다행히 라리가에서는 승점 100점을 기록하며 압도적인 우승을 차지한다.
+      
  </ul>
 </body>
 </html>
