--- a/구단 역사.html
+++ b/구단 역사.html
@@ -124,13 +124,14 @@
        없이 노력했고 이 시즌이 되어서 클럽에 완벽히 녹아들며 그 어느 팀도 바르셀로나를 이길 수 없다는 인식이 박힐 정도로 최고의 시즌을 보내게 된다. 
        코파 델 레이에서의 준우승을 제외하고 모든 대회에서 우승하며 완벽한 팀으로 거듭난다. 2011- 12시즌에는 전 시즌의 기세를 쭉쭉 이어가며 UEFA 슈퍼컵, 
        수페르코파 데 에스파냐, FIFA 클럽 월드컵에서 나란히 우승을 차지하며 또 한번 역대급의 시즌을 쓸 것으로 예상했으나 지난 시즌의 임팩트가 너무 강렬했던 것인지
-       후반기로 갈수록 리그에서 점점 밀리는 모습을 보여주며 라 리가 2위, UEFA 챔피언스 리그 4강 탈락으로 시즌을 마감하게 된다. 다행히 코파 델 레이에서는 우승하였고
+       후반기로 갈수록 리그에서 점점 밀리는 모습을 보여주며 라리가 2위, UEFA 챔피언스 리그 4강 탈락으로 시즌을 마감하게 된다. 다행히 코파 델 레이에서는 우승하였고
        이 시즌 리오넬 메시는 다시 한번 미친 듯한 모습을 보여주며 60경기 73골 29도움을 기록하며 구단 공격 포인트 기록을 무수히 갈아치운다. 그리고 이 시즌을 
        마지막으로 펩 과르디올라 감독이 팀을 떠나게 된다.</p>
       <p>12-13시즌 시작과 동시에 티토 빌라노바가 감독으로 부임하면서 기존의 티키타카 전술에서 역습 위주의 전술로 탈 바꿈 하게 된다. 하지만 갑작스러운 전술의 
        변화 때문이었는지 UEFA 챔피언스 리그 4강에서 당시 전성기를 달리고 있던 FC 바이에른 뮌헨에게 합산 스코어 0:7이라는 충격적인 스코어로 탈락하게 된다. 
-       다행히 라리가에서는 승점 100점을 기록하며 압도적인 우승을 차지한다.
-      
+       다행히 라리가에서는 승점 100점을 기록하며 압도적인 우승을 차지한다. 이후 감독이 티토에서 헤라르도 마르티노, 마르티노에서 루이스 엔리케로, 엔리케에서
+       발베르데, 그리고 세티엔, 쿠만, 사비로 이어졌고 이렇게 감독이 바뀌는 동안 바르셀로나는 많은 트로피를 땄지만 레전드 선수 네미아르, 수아레스, 메시 등을 잃
+       었다. 현재는 끔찍한 재정난을 겪고 있지만 그럼에도 불구하고 22-23시즌 라리가 우승을 따냈고, 다음 시즌을 준비하고 있다.</p>
  </ul>
 </body>
 </html>
