--- a/뉴스 & 인터뷰.html
+++ b/뉴스 & 인터뷰.html
@@ -1,6 +1,12 @@
  <!DOCTYPE html>
 <html>
-<head><title>바르셀로나 뉴스 & 인터뷰</title><head>
+<head><title>바르셀로나 뉴스 & 인터뷰</title>
+ <style>
+  td:hover {box-shadow: 2px 2px 2px black,
+                         0 0 25px blue,
+                          0 0 5px darkblue;
+  }
+ </head>
 <body>
   <h4>바르셀로나 뉴스</h4><hr>
   <table align="center">
@@ -14,7 +20,7 @@
        <td><a href="https://www.goal.com/kr/%EB%89%B4%EC%8A%A4/%E1%84%8E%E1%85%AE%E1%86%BC%E1%84%80%E1%85%A7%E1%86%A8-%E1%84%89%E1%85%A1%E1%84%87%E1%85%B5-%E1%84%80%E1%85%A1%E1%86%B7%E1%84%83%E1%85%A9%E1%86%A8%E1%84%80%E1%85%AA-%E1%84%80%E1%85%A1%E1%86%AF%E1%84%83%E1%85%B3%E1%86%BC--1%E1%84%82%E1%85%A7%E1%86%AB-%E1%84%86%E1%85%A1%E1%86%AB%E1%84%8B%E1%85%A6-%E1%84%8B%E1%85%B5%E1%84%8C%E1%85%A5%E1%86%A8-%E1%84%8B%E1%85%AF%E1%86%AB%E1%84%92%E1%85%A1%E1%86%AB%E1%84%83%E1%85%A1/blt5d19e90bca1c3212" target="_self"><img src="뉴스3.png" alt="뉴스3" width="400" height="200"></td></tr>
        </tbody>
        </table>
-       <table>
+       <table align="center">
        <tfoot>
       <tr><th><h3>"가능한 한 바르셀로나서..." '은사'<br> 텐 하흐와 재회는 없다</h3></th><th><h3>레반도프스키 따라갈까...올 여름 '충격'<br>이적 가능성</h3></th>
        <th><h3>"메시는 언제나 환영합니다"... 우루과이<br> DF의 진심</h3></th></tr>
@@ -25,3 +31,4 @@
           <td><a href="https://www.goal.com/kr/%EB%89%B4%EC%8A%A4/%E1%84%86%E1%85%A6%E1%84%89%E1%85%B5%E1%84%82%E1%85%B3%E1%86%AB-%E1%84%8B%E1%85%A5%E1%86%AB%E1%84%8C%E1%85%A6%E1%84%82%E1%85%A1-%E1%84%92%E1%85%AA%E1%86%AB%E1%84%8B%E1%85%A7%E1%86%BC%E1%84%92%E1%85%A1%E1%86%B8%E1%84%82%E1%85%B5%E1%84%83%E1%85%A1---%E1%84%8B%E1%85%AE%E1%84%85%E1%85%AE%E1%84%80%E1%85%AA%E1%84%8B%E1%85%B5-df%E1%84%8B%E1%85%B4-%E1%84%8C%E1%85%B5%E1%86%AB%E1%84%89%E1%85%B5%E1%86%B7/blt9c57daf4fa64de2d" target="_self"><img src="뉴스6.png" alt="뉴스6" width="400" height="200"></td></tr>
        </tbody>
        </table><br><br>
+ <h4>감독 인터뷰</h4>
