Update 뉴스 & 인터뷰.html

--- a/뉴스 & 인터뷰.html
+++ b/뉴스 & 인터뷰.html
@@ -6,6 +6,7 @@
                          0 0 25px blue,
                           0 0 5px darkblue;
   }
+ </style>
  </head>
 <body>
   <h4>바르셀로나 뉴스</h4><hr>
