--- a/엘클1.html
+++ b/엘클1.html
@@ -3,15 +3,15 @@
 <head>
 </head>
 <body>
-  <table>
+  <table border=1>
     <caption>리그 9라운드</caption>
     <tr><td><img src="real.png" width="90" height="75"></td> <td><p>vs</p></td>
       <td><img src="barcelona.png" width="100" height="75"></td></tr>
-    <tr><td>&nbsp;레알 마드리드&nbsp;&nbsp;</td> <td><p>vs</p></td> <td>&nbsp;&nbsp;바르셀로나</td></tr>
+    <tr><td>레알 마드리드</td> <td><p>vs</p></td> <td>&nbsp;&nbsp;바르셀로나</td></tr>
     <tr><td style= color:red;>&nbsp;&nbsp;&nbsp;3</td><td>&nbsp;:&nbsp;</td><td>&nbsp;1</td></tr>
     <tr><td><img src="ball.png" width="10" height="10">12 벤제마 </td> <td></td>
-      <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="ball.png" width="10" height="10">83 페란 토레스</td></tr>
-    <tr><td><img src="ball.png" width="10" height="10">35 페데리코 발베르데</td></tr>
+      <td><img src="ball.png" width="10" height="10">83 페란 토레스</td></tr>
+    <tr><td><img src="ball.png" width="10" height="10">35 페데리코<br> 발베르데</td></tr>
     <tr><td><img src="ball.png" width="10" height="10">90+2 호드리구</td></tr>
     <table>
       </body>
