--- a/엘클2.html
+++ b/엘클2.html
@@ -3,16 +3,15 @@
 <head>
 </head>
 <body>
-  <table>
-    <tr><td>수페르코파</td></tr>
-    <tr>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;23.1.16 04:00 킹 파흐드 인터내셔널 스타디움 </tr>
+  <table border=1>
+    <caption>수페르코파</caption>
     <tr><td><img src="real.png" width="100" height="75"></td> <td><p>vs</p></td>
-      <td><img src="barcelona.png" width="100" height="75"></td></tr>
+      <td><img src="barcelona.png" width="80" height="75"></td></tr>
     <tr><td>&nbsp;레알 마드리드&nbsp;&nbsp;</td> <td><p>vs</p></td> <td>&nbsp;&nbsp;바르셀로나</td></tr>
-    <tr><td style= color:red;>&nbsp;&nbsp;&nbsp;1</td><td>&nbsp;:&nbsp;</td><td>&nbsp;3</td></tr>
-    <tr><td><img src="ball.png" width="10" height="10">90+3 벤제마 </td><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="ball.png" width="10" height="10">34 가비  </tr>
-    <tr><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="ball.png" width="10" height="10">45 레반도프스키   </tr>
-    <tr><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="ball.png" width="10" height="10">69 페드리   </tr>
+    <tr><td>&nbsp;&nbsp;&nbsp;1</td><td>&nbsp;:&nbsp;</td><td style= color:red;>&nbsp;3</td></tr>
+    <tr><td><img src="ball.png" width="10" height="10">90+3 벤제마</td> <td></td> <td><img src="ball.png" width="10" height="10">34 가비</td></tr>
+    <tr><td></td><td></td><td><img src="ball.png" width="10" height="10">45 레반도프스키   </tr>
+    <tr><td></td><td></td><td><img src="ball.png" width="10" height="10">69 페드리</td></tr>
     <table>
       </body>
     </html>
