--- a/엘클5.html
+++ b/엘클5.html
@@ -8,8 +8,8 @@
     <tr><td><img src="barcelona.png" width="80" height="75"></td> <td><p>vs</p></td>
       <td><img src="real.png" width="100" height="75"></td></tr>
     <tr><td>바르셀로나</td> <td><p>vs</p></td> <td>레알 마드리드</td></tr>
-    <tr><td>0</td><td>&nbsp;:</td><td style= color:red;>4</td></tr>
-    <tr><td></td><td></td><td><img src="ball.png" width="10" height="10">45+1 비니시우스</tr>
+    <tr><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;0</td><td>&nbsp;:</td><td style= color:red;>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;4</td></tr>
+    <tr><td></td><td></td><td><img src="ball.png" width="10" height="10">45+1 비니<br>시우스</tr>
      <tr><td></td><td></td><td><img src="ball.png" width="10" height="10">50 벤제마</tr>
      <tr><td></td><td></td><td><img src="ball.png" width="10" height="10">58 벤제마</tr>
      <tr><td></td><td></td><td><img src="ball.png" width="10" height="10">81 벤제마</tr>
