--- a/소시에다드.html
+++ b/소시에다드.html
@@ -4,13 +4,13 @@
 </head>
 <body>
   <table>
-    <tr>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;05.21 04:00 캄프 누</tr>
-    <tr><td><img src="barcelona.png" width="100" height="75"></td> <td><p>vs</p></td>
+    <caption>05.21 04:00 캄프 누</caption>
+    <tr><td><img src="barcelona.png" width="80" height="75"></td> <td><p>vs</p></td>
       <td><img src="realsociedad.png" width="100" height="75"></td></tr>
     <tr><td><tr>&nbsp;&nbsp;바르셀로나&nbsp;&nbsp;&nbsp;</td> <td><p>vs</p></td> <td>&nbsp;&nbsp;&nbsp;레알 소시에다드</td></tr>
     <tr><td>&nbsp;&nbsp;&nbsp;1</td><td>&nbsp;:&nbsp;</td><td style= "color:red";>&nbsp;&nbsp;&nbsp;2</td></tr>
-     <tr><td><img src="ball.png" width="10" height="10">90 레반도프스키</td><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="ball.png" width="10" height="10">5 메리노 </tr>
-    <tr><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="ball.png" width="10" height="10">71 소를로스 </td></tr>
+     <tr><td><img src="ball.png" width="10" height="10">90 레반도프스키</td><td><img src="ball.png" width="10" height="10">5 메리노 </tr>
+    <tr><td><img src="ball.png" width="10" height="10">71 소를로스 </td></tr>
     <table>
       </body>
     </html>
