--- a/엘클5.html
+++ b/엘클5.html
@@ -4,7 +4,7 @@
 </head>
 <body>
   <table border=1>
-    <caption>코파 델 레이 2차전</caption>
+    <caption>코파 델 레이 2차전 (캄프 누)</caption>
     <tr><td><img src="barcelona.png" width="80" height="75"></td> <td><p>vs</p></td>
       <td><img src="real.png" width="100" height="75"></td></tr>
     <tr><td>바르셀로나</td> <td><p>vs</p></td> <td>레알 마드리드</td></tr>
