--- a/소시에다드.html
+++ b/소시에다드.html
@@ -3,7 +3,7 @@
 <head>
 </head>
 <body>
-  <table>
+  <table border=1>
     <caption>05.21 04:00 캄프 누</caption>
     <tr><td><img src="barcelona.png" width="80" height="75"></td> <td><p>vs</p></td>
       <td><img src="realsociedad.png" width="100" height="75"></td></tr>
