Update 뉴스 & 인터뷰.html

--- a/뉴스 & 인터뷰.html
+++ b/뉴스 & 인터뷰.html
@@ -33,3 +33,8 @@
        </tbody>
        </table><br><br>
  <h4>감독 인터뷰</h4>
+ <table align="center">
+    <tfoot>
+      <tr><th><h3>리그 38라운드 셀타 비고전 인터뷰</h3></th><th><h3>리그 37라운드 마요르카전 인터뷰</h3></th><th><h3>리그 36라운드 바야돌리드전 인터뷰</h3></th>
+        </tfoot>
+     
