--- a/뉴스 & 인터뷰.html
+++ b/뉴스 & 인터뷰.html
@@ -43,6 +43,18 @@
      <tr><td><a href="https://www.youtube.com/watch?v=_SksrIw-aJs" target="_self"><img src="인터뷰3.png" alt="인터뷰3" width="400" height="200"></td>
       </tbody>
        </table>
+     <table align="center">
+    <tfoot>
+      <tr><th><h3>리그 35라운드 소시에다드전 인터뷰</h3></th><th><h3>리그 34라운드 에스파뇰전 인터뷰</h3></th><th><h3>리그 33라운드 오사수나전 인터뷰</h3></th>
+        </tfoot>
+  <tbody>
+   <tr><td><a href="https://www.youtube.com/watch?v=SMXUijzJEDU" target="_self"><img src="인터뷰4.png" alt="인터뷰4" width="400" height="200"></td>
+    <tr><td><a href="https://www.youtube.com/watch?v=lZClGDCiGGI" target="_self"><img src="인터뷰5.png" alt="인터뷰5" width="400" height="200"></td>
+     <tr><td><a href="https://www.youtube.com/watch?v=L3AHeL7j-i4" target="_self"><img src="인터뷰6.png" alt="인터뷰6" width="400" height="200"></td>
+      </tbody>
+       </table>
+      </body>
+      </html>
       
     
    
