Update 뉴스 & 인터뷰.html

--- a/뉴스 & 인터뷰.html
+++ b/뉴스 & 인터뷰.html
@@ -39,8 +39,8 @@
         </tfoot>
   <tbody>
    <tr><td><a href="https://www.youtube.com/watch?v=s8ZlInl_VGo" target="_self"><img src="인터뷰1.png" alt="인터뷰1" width="400" height="200"></td>
-    <tr><td><a href="https://www.youtube.com/watch?v=iaRGpV6dEr0" target="_self"><img src="인터뷰2.png" alt="인터뷰2" width="400" height="200"></td>
-     <tr><td><a href="https://www.youtube.com/watch?v=_SksrIw-aJs" target="_self"><img src="인터뷰3.png" alt="인터뷰3" width="400" height="200"></td>
+   <td><a href="https://www.youtube.com/watch?v=iaRGpV6dEr0" target="_self"><img src="인터뷰2.png" alt="인터뷰2" width="400" height="200"></td>
+    <td><a href="https://www.youtube.com/watch?v=_SksrIw-aJs" target="_self"><img src="인터뷰3.png" alt="인터뷰3" width="400" height="200"></td>
       </tbody>
        </table>
      <table align="center">
@@ -49,8 +49,8 @@
         </tfoot>
   <tbody>
    <tr><td><a href="https://www.youtube.com/watch?v=SMXUijzJEDU" target="_self"><img src="인터뷰4.png" alt="인터뷰4" width="400" height="200"></td>
-    <tr><td><a href="https://www.youtube.com/watch?v=lZClGDCiGGI" target="_self"><img src="인터뷰5.png" alt="인터뷰5" width="400" height="200"></td>
-     <tr><td><a href="https://www.youtube.com/watch?v=L3AHeL7j-i4" target="_self"><img src="인터뷰6.png" alt="인터뷰6" width="400" height="200"></td>
+   <td><a href="https://www.youtube.com/watch?v=lZClGDCiGGI" target="_self"><img src="인터뷰5.png" alt="인터뷰5" width="400" height="200"></td>
+    <td><a href="https://www.youtube.com/watch?v=L3AHeL7j-i4" target="_self"><img src="인터뷰6.png" alt="인터뷰6" width="400" height="200"></td>
       </tbody>
        </table>
       </body>
