--- a/구단 순위표.html
+++ b/구단 순위표.html
@@ -3,8 +3,8 @@
 <head><title>구단 순위표</title>
 </head>
 <body>
-  <h3>리그 순위표</h3>
 <table border="2">
+  <caption><h3>리그 순위표</h3></caption>
 <tr><td>순위</td><td>팀명</td><td>경기</td><td>승점</td><td>승</td><td>무</td><td>패</td><td>득점</td><td>실점</td><td>득실차</td></tr>
 <tr><td>1</td><td>바르셀로나</td><td>37</td><td>88</td><td>28</td><td>4</td><td>5</td><td>69</td><td>18</td><td>51</td></tr>
 <tr><td>2</td><td>레알 마드리드</td><td>37</td><td>77</td><td>24</td><td>5</td><td>8</td><td>74</td><td>35</td><td>39</td></tr>
@@ -27,8 +27,8 @@
 <tr><td>19</td><td>에스파뇰</td><td>37</td><td>36</td><td>8</td><td>12</td><td>17</td><td>49</td><td>66</td><td>-17</td></tr>
 <tr><td>20</td><td>엘체</td><td>37</td><td>24</td><td>5</td><td>9</td><td>23</td><td>29</td><td>66</td><td>-37</td></tr>
   </table>
-  <h3>팀 내 공격포인트</h3>
   <table border="2">
+    <caption><h3>팀 내 공격포인트</h3></caption>
     <tr><td>순위</td><td>선수명</td><td>경기</td><td>골</td><td>어시스트</td></tr>
     <tr><td>1</td><td>레반도프스키</td><td>44</td><td>33</td><td>8</td></tr>
     <tr><td>2</td><td>하피냐</td><td>48</td><td>10</td><td>10</td></tr>
