--- a/엘클1.html
+++ b/엘클1.html
@@ -4,7 +4,7 @@
 </head>
 <body>
   <table border=1>
-    <caption>리그 9라운드</caption>
+    <caption>리그 9라운드 (산티아고 베르나베우)</caption>
     <tr><td><img src="real.png" width="90" height="75"></td> <td><p>vs</p></td>
       <td><img src="barcelona.png" width="100" height="75"></td></tr>
     <tr><td>레알 마드리드</td> <td><p>vs</p></td> <td>&nbsp;&nbsp;바르셀로나</td></tr>
