--- a/엘클1.html
+++ b/엘클1.html
@@ -5,9 +5,9 @@
 <body>
   <table border=1>
     <caption>리그 9라운드 (산티아고 베르나베우)</caption>
-    <tr><td><img src="real.png" width="90" height="75"></td> <td><p>vs</p></td>
-      <td><img src="barcelona.png" width="100" height="75"></td></tr>
-    <tr><td>레알 마드리드</td> <td><p>vs</p></td> <td>&nbsp;&nbsp;바르셀로나</td></tr>
+    <tr><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="real.png" width="90" height="75"></td> <td><p>vs</p></td>
+      <td>&nbsp;&nbsp;<img src="barcelona.png" width="100" height="75"></td></tr>
+    <tr><td>&nbsp;레알 마드리드</td> <td><p>vs</p></td> <td>&nbsp;&nbsp;&nbsp;&nbsp;바르셀로나</td></tr>
     <tr><td style= color:red;>&nbsp;&nbsp;&nbsp;3</td><td>&nbsp;:&nbsp;</td><td>&nbsp;1</td></tr>
     <tr><td><img src="ball.png" width="10" height="10">12 벤제마 </td> <td> </td>
       <td><img src="ball.png" width="10" height="10">83 페란 토레스</td></tr>
