Update 뉴스 & 인터뷰.html

--- a/뉴스 & 인터뷰.html
+++ b/뉴스 & 인터뷰.html
@@ -32,7 +32,7 @@
           <td><a href="https://www.goal.com/kr/%EB%89%B4%EC%8A%A4/%E1%84%86%E1%85%A6%E1%84%89%E1%85%B5%E1%84%82%E1%85%B3%E1%86%AB-%E1%84%8B%E1%85%A5%E1%86%AB%E1%84%8C%E1%85%A6%E1%84%82%E1%85%A1-%E1%84%92%E1%85%AA%E1%86%AB%E1%84%8B%E1%85%A7%E1%86%BC%E1%84%92%E1%85%A1%E1%86%B8%E1%84%82%E1%85%B5%E1%84%83%E1%85%A1---%E1%84%8B%E1%85%AE%E1%84%85%E1%85%AE%E1%84%80%E1%85%AA%E1%84%8B%E1%85%B5-df%E1%84%8B%E1%85%B4-%E1%84%8C%E1%85%B5%E1%86%AB%E1%84%89%E1%85%B5%E1%86%B7/blt9c57daf4fa64de2d" target="_self"><img src="뉴스6.png" alt="뉴스6" width="400" height="200"></td></tr>
        </tbody>
        </table><br><br>
- <h4>감독 인터뷰</h4>
+ <h4>감독 인터뷰</h4> <hr>
  <table align="center">
     <tfoot>
       <tr><th><h3>리그 38라운드 셀타 비고전 인터뷰</h3></th><th><h3>리그 37라운드 마요르카전 인터뷰</h3></th><th><h3>리그 36라운드 바야돌리드전 인터뷰</h3></th>
