--- a/엘클3.html
+++ b/엘클3.html
@@ -3,7 +3,7 @@
 <head>
 </head>
 <body>
-  <table>
+  <table align=center>
     <caption>코파 델 레이 1차전<caption>
     <tr><td>&nbsp;&nbsp;<img src="real.png" width="90" height="75"></td> <td><p>vs</p></td>
       <td>&nbsp;&nbsp;<img src="barcelona.png" width="90" height="75"></td></tr>
