--- a/엘클4.html
+++ b/엘클4.html
@@ -3,7 +3,7 @@
 <head>
 </head>
 <body>
-  <table>
+  <table align=center>
     <caption>리그 26라운드 (캄프 누)</caption>
     <tr><td><img src="barcelona.png" width="80" height="75"></td> <td><p>vs</p></td>
       <td><img src="real.png" width="100" height="75"></td></tr>
