--- a/엘클5.html
+++ b/엘클5.html
@@ -3,7 +3,7 @@
 <head>
 </head>
 <body>
-  <table border=1>
+  <table align=center>
     <caption>코파 델 레이 2차전 (캄프 누)</caption>
     <tr><td><img src="barcelona.png" width="80" height="75"></td> <td><p>vs</p></td>
       <td><img src="real.png" width="100" height="75"></td></tr>
