--- a/소시에다드.html
+++ b/소시에다드.html
@@ -8,7 +8,7 @@
     <tr><td><img src="barcelona.png" width="80" height="75"></td> <td><p>vs</p></td>
       <td><img src="realsociedad.png" width="100" height="75"></td></tr>
     <tr><td>바르셀로나</td> <td><p>vs</p></td> <td>레알 소시에다드</td></tr>
-    <tr><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1</td><td>&nbsp;:</td><td style="color:red";>&nbsp;&nbsp;&nbsp;2</td></tr>
+    <tr><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1</td><td>&nbsp;:</td><td style="color:red";>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2</td></tr>
     <tr><td><img src="ball.png" width="10" height="10">90 레반도<br>프스키</td> <td> </td> <td><img src="ball.png" width="10" height="10">5 메리노 </tr>
     <tr> <td> </td> <td> </td> <td><img src="ball.png" width="10" height="10">71 소를로스 </td></tr>
     <table>
