--- a/바야돌리드.html
+++ b/바야돌리드.html
@@ -6,9 +6,9 @@
   <table>
     <caption>05.24 05:00 (호세 소리야)</caption>
     <tr><td><img src="realvalladolid.png" width="130" height="75"></td> <td><p>vs</p></td>
-      <td><img src="barcelona.png" width="80" height="75"></td></tr>
-    <tr><td>레알 바야돌리드</td> <td><p>vs</p></td> <td>바르셀로나</td></tr>
-    <tr><td style= color:red;>&nbsp;&nbsp;&nbsp;3</td><td>&nbsp;:</td><td>&nbsp;1</td></tr>
+      <td>&nbsp;&nbsp;&nbsp;&nbsp;<img src="barcelona.png" width="80" height="75"></td></tr>
+    <tr><td>레알 바야돌리드</td> <td><p>vs</p></td> <td>&nbsp;&nbsp;&nbsp;&nbsp;바르셀로나</td></tr>
+    <tr><td style= color:red;>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3</td><td>&nbsp;:</td><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1</td></tr>
     <tr><td><img src="redball.png" width="20" height="20">2 크리스<br>텐센</td> <td></td> <td><img src="ball.png" width="10" height="10">84 레반도프스키</td></tr>
     <tr><td><img src="ball.png" width="10" height="10">22 래린</td></tr>
     <tr><td><img src="ball.png" width="10" height="10">73 플라타</td></tr>
