--- a/엘클1.html
+++ b/엘클1.html
@@ -8,7 +8,8 @@
     <tr><td>&nbsp;<img src="real.png" width="90" height="75"></td> <td><p>vs</p></td>
       <td>&nbsp;&nbsp;<img src="barcelona.png" width="80" height="75"></td></tr>
     <tr><td>레알 마드리드</td> <td><p>vs</p></td> <td>&nbsp;&nbsp;바르셀로나</td></tr>
-    <tr><td style= color:red;>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3</td><td>&nbsp;:</td><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1</td></tr>
+    <tr><td style=color:red;>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3</td>
+      <td>&nbsp;:</td><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1</td></tr>
     <tr><td><img src="ball.png" width="10" height="10">12 벤제마 </td> <td> </td>
       <td><img src="ball.png" width="10" height="10">83 페란 토레스</td></tr>
     <tr><td><img src="ball.png" width="10" height="10">35 페데리코<br> 발베르데</td></tr>
