--- a/엘클2.html
+++ b/엘클2.html
@@ -7,7 +7,7 @@
     <caption>수페르코파</caption>
     <tr><td><img src="real.png" width="100" height="75"></td> <td><p>vs</p></td>
       <td>&nbsp;<img src="barcelona.png" width="80" height="75"></td></tr>
-    <tr><td>레알 마드리드</td> <td><p>vs</p></td> <td>&nbsp;&nbsp;바르셀로나</td></tr>
+    <tr><td>레알 마드리드</td> <td><p>vs</p></td> <td>바르셀로나</td></tr>
     <tr><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1</td><td>&nbsp;:</td>
       <td style= color:red;>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3</td></tr>
     <tr><td><img src="ball.png" width="10" height="10">90+3 벤제마</td> <td></td> <td><img src="ball.png" width="10" height="10">34 가비</td></tr>
