--- a/소시에다드.html
+++ b/소시에다드.html
@@ -4,7 +4,7 @@
 </head>
 <body>
   <table align=center>
-    <caption>05.21 04:00 캄프 누</caption>
+    <caption>05.21 04:00 (캄프 누)</caption>
     <tr><td><img src="barcelona.png" width="80" height="75"></td> <td><p>vs</p></td>
       <td><img src="realsociedad.png" width="100" height="75"></td></tr>
     <tr><td>바르셀로나</td> <td><p>vs</p></td> <td>레알 소시에다드</td></tr>
