--- a/에스파뇰.html
+++ b/에스파뇰.html
@@ -10,9 +10,9 @@
     <tr><td>&nbsp;&nbsp;&nbsp;&nbsp;에스파뇰</td> <td><p>vs</p></td> <td>&nbsp;&nbsp;바르셀로나</td></tr>
     <tr><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2</td><td>&nbsp;:</td>
       <td style= "color:red";>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;4</td></tr>
-    <tr><td><img src="ball.png" width="10" height="10">73 푸아도</td> <td></td> <td><img src="ball.png" width="10" height="10">11 레반도프스키</td></tr>
+    <tr><td><img src="ball.png" width="10" height="10">73 푸아도</td> <td></td> <td><img src="ball.png" width="10" height="10">11 레반도<br>프스키</td></tr>
     <tr><td><img src="ball.png" width="10" height="10">90+2 호셀루</td> <td></td> <td><img src="ball.png" width="10" height="10">20 발데</td></tr>
-    <tr><td></td><td></td><td><img src="ball.png" width="10" height="10">40 레반도프스키</td></tr>
+    <tr><td></td><td></td><td><img src="ball.png" width="10" height="10">40 레반도<br>프스키</td></tr>
   <tr><td></td><td></td><td><img src="ball.png" width="10" height="10">53 쿤데 </td></tr>
     <table>
       </body>
