--- a/구단 역사.html
+++ b/구단 역사.html
@@ -72,17 +72,18 @@
     선수 개인 합의 직전, 레알 마드리드 CF가 끼어들어 디 스테파노를 하이 재킹 하는 바람에 디 스테파노는 레알 마드리드로 향하게 되었고 쿠발라의 바르셀로나 vs 디
     스테파노의 레알 마드리드의 라이벌 의식이 생기기 시작했다. 디 스테파노를 빼앗겼기에 그를 대체할 선수로 루이스 수아레스를 영입한다.</p>
   <p>1955년, 점점 커지는 클럽의 위상에 걸맞게 새로운 홈 구장이 필요하다는 많은 클럽 구성원들의 목소리가 나왔고 운영진들도 이를 받아들여 새로운 홈 구장을 디자인하
-    기 시작한다. 그리고 1957년 9월 24일, 2년 간의 건설 끝에 새로운 홈 구장 캄 노우가 개장한다. 당시 최대 수용 인원은 99,053명으로 전 세계 최대의 축구 전용 구장
-    이라는 타이틀을 얻게 된다. 새로운 홈 구장과 함께 바르셀로나는 승승장구하기 시작했으며 현재 UEFA 유로파 리그의 원조 격이라고 할 수 있는 인터-시티 페어스컵에
-    서 1957-58, 1959-60 시즌에 우승을 차지하게 되고 라리가에서도 1958-59, 1959-60 시즌에 2연속 우승을 차지하게 되었다.</p>
+    기 시작한다. 그리고 1957년 9월 24일, 2년 간의 건설 끝에 새로운 홈 구장 <span style="color:orange">캄 노우</span>가 개장한다. 당시 최대 수용 인원은
+   99,053명으로 전 세계 최대의 축구 전용 구장이라는 타이틀을 얻게 된다. 새로운 홈 구장과 함께 바르셀로나는 승승장구하기 시작했으며 현재 UEFA 유로파 리그의 원조
+   격이라고 할 수 있는 인터-시티 페어스컵에서 1957-58, 1959-60 시즌에 우승을 차지하게 되고 라리가에서도 1958-59, 1959-60 시즌에 2연속 우승을 차지하게 되었다.</p>
  <li> <p id="1960">1959-60 시즌 라리가 우승 이후 바르사는 30년에 걸친 최악의 암흑기를 겪었다. 처음에는 일시적인 것처럼 보였던 이 암흑기는 해가 지나가면서 끝이 보이지 않는 터
     널이 되었다. 바르셀로나는 60년대 동안 라리가 우승을 단 한차례도 차지하지 못했으며, 1998-90시즌까지 30시즌 동안 라리가 우승이 단 두 차례에 불과했다. 끝없는 
-    암흑기와 함께 팀의 몰락이 계속될 것이라고 예상되었지만 1971년에 리누스 미헬스 감독을 선임하고 1973년 8월 13일, 요한 크루이프를 최대 이적료로 영입했으며
-    크루이프는 곧바로 바르셀로나의 주장으로 선임되었다. 이렇게 감독 리누스 미헬스, 주장 요한 크루이프를 필두로 바르셀로나는 1973-74 시즌 라리가 타이틀도 다시
-  되찾아 오게 되었고, 크루이프는 1974년 발롱도르를 거머지게 되었다.</p>
+    암흑기와 함께 팀의 몰락이 계속될 것이라고 예상되었지만 1971년에 리누스 미헬스 감독을 선임하고 1973년 8월 13일, <span style="color:orange">요한 크루이프</span>를
+  최대 이적료로 영입했으며 크루이프는 곧바로 바르셀로나의 주장으로 선임되었다. 이렇게 감독 리누스 미헬스, 주장 요한 크루이프를 필두로 바르셀로나는 1973-74 시즌
+  라리가 타이틀도 다시 되찾아 오게 되었고, 크루이프는 1974년 발롱도르를 거머지게 되었다.</p>
   <li><p id="1974"> 같은 해인 1974년, 바르셀로나는 창단 75주년을 맞이하여 공식 응원가를 처음으로 만들기 시작하였다. 하우메 피카스, 주제프 마리아 에스피나스 
- 작사에 마누엘 발스와 코랄 산트 조르디 작곡으로 Cant Del Barca를 만들었다. 그리고 스페인 정부가 민주주의 시대로 접어들면서 모든 지방의 언어 사용이 자유화되면서 Club de Futbol Barcelona에서 다시 원 이름인 Futbol Club Barcelon를 되찾았고 로고 역시 CFB에서 FCB로
-    바뀔 수 있게 되었다.
+ 작사에 마누엘 발스와 코랄 산트 조르디 작곡으로 <span style="color:orange">Cant Del Barca</span>를 만들었다. 그리고 스페인 정부가 민주주의 시대로 접어들면서
+   모든 지방의 언어 사용이 자유화되면서 Club de Futbol Barcelona에서 다시 원 이름인 <span style="color:orange">Futbol Club Barcelona</span>를 되찾았고 
+   로고 역시 CFB에서 FCB로 바뀔 수 있게 되었다.</p>
     <li><p id="1975">1978년에 치러진 회장 선거에서 주젭 유이스 누녜스가 당선된 후 재정이 넉넉해졌고 이때부터 누녜스는 스타 플레이어들을 수집하기 시작했는데, 1982년 여름 이적
       시장에 80년대 최고의 축구 스타, 디에고 마라도나를 영입했고, 이어서 게리 리네커, 베른트 슈스터, 안도니 수비사레타 같은 슈퍼스타들을 돈을 뿌려가며 영입했다.
       동시에 누녜스는 우도 라텍, 세자르 루이스 메노티, 테리 베너블스, 루이스 아라고네스 등 명장등을 연이어 영입했으나 성과가 나오지 않았다. 하지만 이렇게 천문학적
@@ -110,16 +111,17 @@
       결국 시즌 도중 판할 감독이 경질되었고, 가스파르트 회장도 사임했다. 이후 라도미르 안티치가 땜빵으로 감독을 맡았고, 팀은 6위로 시즌을 마무리하며 챔스 출전이
       불발되었다. 2003년 조안 라포르타가 회장으로 선출되어 전 네덜란드 국대 감독 프랑크 레이카르트를 선임하였고, 파리 생제르맹 FC에서 활약하던 당대 최고의 
       브라질리언 스타 호나우지뉴를 영입했다.</p>
-       <p>2004-05시즌에는 아르헨티나의 샛별 리오넬 메시도 1군에 데뷔했다. 이에 힘 입어 2005-06시즌, UEFA 챔피언스 리그 정상에 오르게 된다. 유러피언 컵에서 UEFA 
-      챔피언스 리그로 개편된 뒤 처음으로 우승 타이틀을 거머쥐게 된다. UEFA 챔피언스 리그뿐 아니라 모든 대회에서 좋은 성적을 거두기 시작하며 메가 클럽으로 거듭
-      나기 시작한다. 2006년에는 전 세계 축구 사상 처음으로 기업이 아닌 공익 기구, 유니세프와 계약을 맺게 된다. 그러나 2005-06시즌 이후 레이카르트 감독의 선수단
-      장악력이 약해지고 호나우지뉴와 데쿠에게 검은 양 사건으로 대표되는 사생활 및 자기관리 실패 문제가 생기면서 팀은 침체기에 빠져 2시즌 간 무관을 기록했다. 
-     이에 따라 레이카르트 감독을 경질하고 펩 과르디올라를 새 감독으로 선임하였다. 또한 호나우지뉴와 데쿠를 이적시키면서 이제 팀의 중심은 메시에게 넘어가게 된다.</p>
-     <p>2008년, 펩 과르디올라가 바르셀로나 1군 감독으로 부임하면서 최전성기가 시작된다. FC 바르셀로나 B에서 승격된 감독인 만큼 라 마시아 데 칸 플라네스를 적극적으로
-      활용하였으며 카를레스 푸욜, 빅토르 발데스, 차비 에르난데스, 안드레스 이니에스타, 리오넬 메시, 세르지오 부스케츠, 제라르 피케가 팀의 주축이 되어 펩의 티키타카
-      전술을 수행하면서 스페인 팀 역사상 처음으로 트레블을 달성하게 된다. 이 시즌부터 메시가 신으로 거듭나게 되며 시즌 종료 이후 2009 발롱도르의 주인공이 된다.
-      이전 시즌의 기세를 이어 받아 2009-10 시즌에 UEFA 슈퍼컵, 수페르코파 데 에스파냐, FIFA 클럽 월드컵에서 우승하며 전 세계 최초로 6관왕을 달성하게 된다. 
-      UEFA 챔피언스 리그는 4강에서 인터 밀란에게 패했으나 2연속 라리가 우승에 성공했다.</p>
+       <p>2004-05시즌에는 아르헨티나의 샛별 <span style="color:orange">리오넬 메시</span>도 1군에 데뷔했다. 이에 힘 입어 2005-06시즌, UEFA 챔피언스 리그 정상에
+        오르게 된다. 유러피언 컵에서 UEFA 챔피언스 리그로 개편된 뒤 처음으로 우승 타이틀을 거머쥐게 된다. UEFA 챔피언스 리그뿐 아니라 모든 대회에서 좋은 성적을
+        거두기 시작하며 메가 클럽으로 거듭나기 시작한다. 2006년에는 전 세계 축구 사상 처음으로 기업이 아닌 공익 기구, 유니세프와 계약을 맺게 된다. 그러나 
+        2005-06시즌 이후 레이카르트 감독의 선수단 장악력이 약해지고 호나우지뉴와 데쿠에게 검은 양 사건으로 대표되는 사생활 및 자기관리 실패 문제가 생기면서 
+        팀은 침체기에 빠져 2시즌 간 무관을 기록했다. 이에 따라 레이카르트 감독을 경질하고 펩 과르디올라를 새 감독으로 선임하였다. 또한 호나우지뉴와 데쿠를 이적
+        시키면서 이제 팀의 중심은 메시에게 넘어가게 된다.</p>
+     <p>2008년, <span style="color:orange">펩 과르디올라</span>가 바르셀로나 1군 감독으로 부임하면서 최전성기가 시작된다. FC 바르셀로나 B에서 승격된 감독인
+      만큼 라 마시아 데 칸 플라네스를 적극적으로 활용하였으며 카를레스 푸욜, 빅토르 발데스, 차비 에르난데스, 안드레스 이니에스타, 리오넬 메시, 세르지오 부스케츠
+      , 제라르 피케가 팀의 주축이 되어 펩의 티키타카 전술을 수행하면서 스페인 팀 역사상 처음으로 트레블을 달성하게 된다. 이 시즌부터 메시가 신으로 거듭나게 되며
+      시즌 종료 이후 2009 발롱도르의 주인공이 된다. 이전 시즌의 기세를 이어 받아 2009-10 시즌에 UEFA 슈퍼컵, 수페르코파 데 에스파냐, FIFA 클럽 월드컵에서 우승하
+      며 전 세계 최초로 6관왕을 달성하게 된다. UEFA 챔피언스 리그는 4강에서 인터 밀란에게 패했으나 2연속 라리가 우승에 성공했다.</p>
       <p>2010-11 시즌에는 성적과 별개로 축구사 역사상 가장 강력한 팀으로 평가 받는 팀이 완성되었다. 펩 과르디올라 감독이 2시즌 동안 티키타카 전술을 녹이려 끝
        없이 노력했고 이 시즌이 되어서 클럽에 완벽히 녹아들며 그 어느 팀도 바르셀로나를 이길 수 없다는 인식이 박힐 정도로 최고의 시즌을 보내게 된다. 
        코파 델 레이에서의 준우승을 제외하고 모든 대회에서 우승하며 완벽한 팀으로 거듭난다. 2011- 12시즌에는 전 시즌의 기세를 쭉쭉 이어가며 UEFA 슈퍼컵, 
