--- a/index.html
+++ b/index.html
@@ -6,6 +6,24 @@
       a {text-decoration: none!important; color:white;}
     </style>
     <script>
+function over1(obj) {
+obj.src="포메이션1.png"; 
+}
+function out1(obj) {
+obj.src="셀타비고.html";
+}
+function over2(obj) {
+obj.src="포메이션2.png"; 
+}
+function out2(obj) {
+obj.src="마요르카.html";
+}
+function over3(obj) {
+obj.src="포메이션3.png"; 
+}
+function out3(obj) {
+obj.src="바야돌리드.html";
+}
 function over4(obj) {
 obj.src="포메이션4.png"; 
 }
@@ -17,6 +35,36 @@ obj.src="포메이션5.png";
 }
 function out5(obj) {
 obj.src="에스파뇰.html";
+}
+function over6(obj) {
+obj.src="포메이션6.png"; 
+}
+function out6(obj) {
+obj.src="엘클5.html";
+}
+function over7(obj) {
+obj.src="포메이션7.png"; 
+}
+function out7(obj) {
+obj.src="엘클4.html";
+}
+function over8(obj) {
+obj.src="포메이션8.png"; 
+}
+function out8(obj) {
+obj.src="엘클3.html";
+}
+function over9(obj) {
+obj.src="포메이션9.png"; 
+}
+function out9(obj) {
+obj.src="엘클2.html";
+}
+function over10(obj) {
+obj.src="포메이션10.png"; 
+}
+function out10(obj) {
+obj.src="엘클1.html";
 }
     </script>     
   </head>
