--- a/구단 순위표.html
+++ b/구단 순위표.html
@@ -3,7 +3,9 @@
 <head><title>구단 순위표</title>
 </head>
 <body>
-<table border="2">
+  <table>
+    <tr>
+<td><table border="2">
   <caption><h3>리그 순위표</h3></caption>
 <tr><td>순위</td><td>팀명</td><td>경기</td><td>승점</td><td>승</td><td>무</td><td>패</td><td>득점</td><td>실점</td><td>득실차</td></tr>
 <tr><td>1</td><td>바르셀로나</td><td>37</td><td>88</td><td>28</td><td>4</td><td>5</td><td>69</td><td>18</td><td>51</td></tr>
@@ -26,8 +28,8 @@
 <tr><td>18</td><td>레알 바야돌리드</td><td>37</td><td>39</td><td>11</td><td>6</td><td>20</td><td>33</td><td>63</td><td>-30</td></tr>
 <tr><td>19</td><td>에스파뇰</td><td>37</td><td>36</td><td>8</td><td>12</td><td>17</td><td>49</td><td>66</td><td>-17</td></tr>
 <tr><td>20</td><td>엘체</td><td>37</td><td>24</td><td>5</td><td>9</td><td>23</td><td>29</td><td>66</td><td>-37</td></tr>
-  </table>
-  <table border="2">
+  </table></td>
+  <td><table border="2">
     <caption><h3>팀 내 공격포인트</h3></caption>
     <tr><td>순위</td><td>선수명</td><td>경기</td><td>골</td><td>어시스트</td></tr>
     <tr><td>1</td><td>레반도프스키</td><td>44</td><td>33</td><td>8</td></tr>
@@ -46,5 +48,7 @@
     <tr><td>14</td><td>마르코스 알론소</td><td>35</td><td>3</td><td>0</td></tr>
     <tr><td>15</td><td>아라우호</td><td>31</td><td>1</td><td>2</td></tr>
     <tr><td>16</td><td>에릭 가르시아</td><td>30</td><td>1</td><td>1</td></tr>
-    <tr><td>17</td><td>크리스텐센</td><td>30</td><td>1</td><td>1</td></tr>
+    <tr><td>17</td><td>크리스텐센</td><td>30</td><td>1</td><td>1</td></tr></td></tr>
+  </table>
+  
     
