--- a/구단 순위표.html
+++ b/구단 순위표.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head><title>구단 순위표</title>
+<head><link rel="shortcut icon" href="파비콘.png">
+  <title>구단 순위표</title>
 </head>
 <body>
   <table>
