--- a/구단 역사.html
+++ b/구단 역사.html
@@ -1,6 +1,7 @@
  <!DOCTYPE html>
 <html>
-<head><title>구단 역사</title><head>
+<head><link rel="shortcut icon" href="파비콘.png">
+ <title>구단 역사</title><head>
 <body>
  <h4>구단 역사</h4>
  <table border=1>
