Update 뉴스 & 인터뷰.html

--- a/뉴스 & 인터뷰.html
+++ b/뉴스 & 인터뷰.html
@@ -1,6 +1,7 @@
  <!DOCTYPE html>
 <html>
-<head><title>바르셀로나 뉴스 & 인터뷰</title>
+<head><link rel="shortcut icon" href="파비콘.png">
+ <title>바르셀로나 뉴스 & 인터뷰</title>
  <style>
   td:hover {box-shadow: 2px 2px 2px black,
                          0 0 25px blue,
