--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head><title>FC Barcelona FanPage</title>
+  <head><link rel="shortcut icon" href="파비콘.png">
+    <title>FC Barcelona FanPage</title>
     <style>
       .header {width:100%; background:gray; color:white;}
       a {text-decoration: none!important; color:white;}
