--- a/셀타비고.html
+++ b/셀타비고.html
@@ -3,10 +3,10 @@
 <head>
 </head>
 <body>
-  <table border=1 aling=center>
+  <table border=1 align=center>
     <caption>06.05 04:00 (발라이도스)</caption>
-    <tr><td><img src="celta.png" width="100" height="75"></td> <td><p>vs</p></td>
-      <td><img src="barcelona.png" width="80" height="75"></td></tr>
+    <tr><td><img src="celta.png" width="90" height="75"></td> <td><p>vs</p></td>
+      <td>&nbsp;&nbsp;&nbsp;<img src="barcelona.png" width="80" height="75"></td></tr>
     <tr><td>셀타 비고</td> <td><p>vs</p></td> <td>바르셀로나</td></tr>
     <tr><td style= "color:red";>2</td><td>&nbsp;:</td><td>1</td></tr>
     <tr><td><img src="ball.png" width="10" height="10">42 베이가</td> <td></td> <td><img src="ball.png" width="10" height="10">79 파티</td></tr>
