--- a/셀타비고.html
+++ b/셀타비고.html
@@ -3,7 +3,7 @@
 <head>
 </head>
 <body>
-  <table border=1 align=center>
+  <table align=center>
     <caption>06.05 04:00 (발라이도스)</caption>
     <tr><td><img src="celta.png" width="90" height="75"></td> <td><p>vs</p></td>
       <td>&nbsp;&nbsp;&nbsp;<img src="barcelona.png" width="80" height="75"></td></tr>
