--- a/구단 역사.html
+++ b/구단 역사.html
@@ -1,8 +1,12 @@
  <!DOCTYPE html>
 <html>
 <head><link rel="shortcut icon" href="파비콘.png">
- <title>구단 역사</title><head>
-<body>
+ <title>구단 역사</title>
+ <style>
+th {color:white;}
+</style>
+ </head>
+<body style="background-color:black";>
  <h4>구단 역사</h4>
  <table border=1>
 <thead>
@@ -24,6 +28,7 @@
  <td><a href="#2002"><img src="2002.png" alt="사진10" width="150" height="150"></td></tr>
 </tbody>
 </table><hr>
+ <span style="color:white";>
  <ul>
   <li><p id="1899">1899년 10월 22일, 바르셀로나에 거주하는 외국인들이 점점 널리 퍼지는 축구의 인기에 힘입어 스위스인 <span style=color:orange>주안 감페르</span>
    를 주축으로 하여 클럽이 탄생하였다. 11월 29일 솔레 힘나시오에 스위스 오토 쿤슬, 욀터 윌드, 잉글랜드인 윌리엄 파손스, 독일인 오토 마이어, 카탈루냐인
@@ -135,6 +140,7 @@
        다행히 라리가에서는 승점 100점을 기록하며 압도적인 우승을 차지한다. 이후 감독이 티토에서 헤라르도 마르티노, 마르티노에서 루이스 엔리케로, 엔리케에서
        발베르데, 그리고 세티엔, 쿠만, 사비로 이어졌고 이렇게 감독이 바뀌는 동안 바르셀로나는 많은 트로피를 땄지만 레전드 선수 네미아르, 수아레스, 메시 등을 잃
        었다. 현재는 끔찍한 재정난을 겪고 있지만 그럼에도 불구하고 22-23시즌 라리가 우승을 따냈고, 다음 시즌을 준비하고 있다.</p>
+  </span>
  </ul>
 </body>
 </html>
