--- a/구단 역사.html
+++ b/구단 역사.html
@@ -7,7 +7,7 @@ th {color:white;}
 </style>
  </head>
 <body style="background-color:black";>
- <h4>구단 역사</h4>
+<span style="color:blue";><h4>구단 역사</h4></span>
  <table border=1>
 <thead>
 <tr><th>1899~1910</th><th>1910~1920</th><th>1920~1936</th><th>1936~1939</th><th>1939~1946</th></tr>
