--- a/구단 순위표.html
+++ b/구단 순위표.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
+
 <head><link rel="shortcut icon" href="파비콘.png">
-  <title>구단 순위표</title>
+<title>구단 순위표</title>
+
 </head>
-<body>
-  <table>
-    <tr>
-<td><table border="2">
-  <caption><h3>리그 순위표</h3></caption>
+<body style="background-color:black";>
+<span style="color:white";>
+<table>
+<tr><td><table border="2">
+  <caption><span style="color:blue";><h3>리그 순위표</h3></span></caption>
 <tr><td>순위</td><td>팀명</td><td>경기</td><td>승점</td><td>승</td><td>무</td><td>패</td><td>득점</td><td>실점</td><td>득실차</td></tr>
 <tr><td>1</td><td>바르셀로나</td><td>37</td><td>88</td><td>28</td><td>4</td><td>5</td><td>69</td><td>18</td><td>51</td></tr>
 <tr><td>2</td><td>레알 마드리드</td><td>37</td><td>77</td><td>24</td><td>5</td><td>8</td><td>74</td><td>35</td><td>39</td></tr>
@@ -28,10 +30,10 @@
 <tr><td>17</td><td>셀타 비고</td><td>37</td><td>40</td><td>10</td><td>10</td><td>17</td><td>41</td><td>52</td><td>-11</td></tr>
 <tr><td>18</td><td>레알 바야돌리드</td><td>37</td><td>39</td><td>11</td><td>6</td><td>20</td><td>33</td><td>63</td><td>-30</td></tr>
 <tr><td>19</td><td>에스파뇰</td><td>37</td><td>36</td><td>8</td><td>12</td><td>17</td><td>49</td><td>66</td><td>-17</td></tr>
-<tr><td>20</td><td>엘체</td><td>37</td><td>24</td><td>5</td><td>9</td><td>23</td><td>29</td><td>66</td><td>-37</td></tr>
-  </table></td>
-  <td><table border="2">
-    <caption><h3>팀 내 공격포인트</h3></caption>
+<tr><td>20</td><td>엘체</td><td>37</td><td>24</td><td>5</td><td>9</td><td>23</td><td>29</td><td>66</td><td>-37</td></tr></td> 
+  </table>
+ <td><table border="2">
+    <caption><span style="color:blue";><h3>팀 내 공격포인트</h3></span></caption>
     <tr><td>순위</td><td>선수명</td><td>경기</td><td>골</td><td>어시스트</td></tr>
     <tr><td>1</td><td>레반도프스키</td><td>44</td><td>33</td><td>8</td></tr>
     <tr><td>2</td><td>하피냐</td><td>48</td><td>10</td><td>10</td></tr>
@@ -50,6 +52,6 @@
     <tr><td>15</td><td>아라우호</td><td>31</td><td>1</td><td>2</td></tr>
     <tr><td>16</td><td>에릭 가르시아</td><td>30</td><td>1</td><td>1</td></tr>
     <tr><td>17</td><td>크리스텐센</td><td>30</td><td>1</td><td>1</td></tr></td></tr>
-  </table>
-  
+</table>
+</span>
     
