--- a/뉴스 & 인터뷰.html
+++ b/뉴스 & 인터뷰.html
@@ -9,8 +9,9 @@
   }
  </style>
  </head>
-<body>
-  <h4>바르셀로나 뉴스</h4><hr>
+<body style="background-color:black";>
+  <span style="color:blue";><h4>바르셀로나 뉴스</h4></span><hr>
+ <span style="color:white";>
   <table align="center">
     <tfoot>
       <tr><th><h3>PSG 떠나는 메시, 바르셀로나 복귀할까</h3></th><th><h3>"떠나지 않을 것" 사비 감독과 갈등->이적 요청<br> '단순히 해프닝'으로 마무리[오피셜]</h3></th>
@@ -33,7 +34,7 @@
           <td><a href="https://www.goal.com/kr/%EB%89%B4%EC%8A%A4/%E1%84%86%E1%85%A6%E1%84%89%E1%85%B5%E1%84%82%E1%85%B3%E1%86%AB-%E1%84%8B%E1%85%A5%E1%86%AB%E1%84%8C%E1%85%A6%E1%84%82%E1%85%A1-%E1%84%92%E1%85%AA%E1%86%AB%E1%84%8B%E1%85%A7%E1%86%BC%E1%84%92%E1%85%A1%E1%86%B8%E1%84%82%E1%85%B5%E1%84%83%E1%85%A1---%E1%84%8B%E1%85%AE%E1%84%85%E1%85%AE%E1%84%80%E1%85%AA%E1%84%8B%E1%85%B5-df%E1%84%8B%E1%85%B4-%E1%84%8C%E1%85%B5%E1%86%AB%E1%84%89%E1%85%B5%E1%86%B7/blt9c57daf4fa64de2d" target="_self"><img src="뉴스6.png" alt="뉴스6" width="400" height="200"></td></tr>
        </tbody>
        </table><br><br>
- <h4>감독 인터뷰</h4> <hr>
+  <span style="color:blue";><h4>감독 인터뷰</h4></span> <hr>
  <table align="center">
     <tfoot>
       <tr><th><h3>리그 38라운드 셀타 비고전 인터뷰</h3></th><th><h3>리그 37라운드 마요르카전 인터뷰</h3></th><th><h3>리그 36라운드 바야돌리드전 인터뷰</h3></th>
@@ -54,6 +55,7 @@
        <td><a href="https://www.youtube.com/watch?v=L3AHeL7j-i4" target="_self"><img src="인터뷰4.png" alt="인터뷰6" width="400" height="200"></td></tr>
       </tbody>
        </table>
+  </span>
       </body>
       </html>
       
