--- a/셀타비고.html
+++ b/셀타비고.html
@@ -8,7 +8,7 @@
     <tr><td><img src="celta.png" width="90" height="75"></td> <td><p>vs</p></td>
       <td>&nbsp;&nbsp;&nbsp;<img src="barcelona.png" width="80" height="75"></td></tr>
     <tr><td>셀타 비고</td> <td><p>vs</p></td> <td>&nbsp;&nbsp;&nbsp;바르셀로나</td></tr>
-    <tr><td style= "color:red";>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2</td><td>&nbsp;:</td><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1</td></tr>
+    <tr><td style= "color:red";>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2</td><td>&nbsp;:</td><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1</td></tr>
     <tr><td><img src="ball.png" width="10" height="10">42 베이가</td> <td></td> <td><img src="ball.png" width="10" height="10">79 파티</td></tr>
     <tr><td><img src="ball.png" width="10" height="10">65 베이가</td></tr>
     </table>
