--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@ obj.src="엘클1.html";
     <td><a href="구단 역사.html"><h3>&lt;구단 역사&gt;</h3></td>
     <td><a href="구단 순위표.html"><h3>&lt;구단 순위표&gt;</h3></td>
     <td><a href="뉴스 & 인터뷰.html"><h3>&lt;뉴스 & 인터뷰&gt;</h3></td>
+     <td><a href="구단 역사.html"><h3>&lt;구단 역사&gt;</h3></td>
+    <td><a href="구단 순위표.html"><h3>&lt;구단 순위표&gt;</h3></td>
+    <td><a href="뉴스 & 인터뷰.html"><h3>&lt;뉴스 & 인터뷰&gt;</h3></td>
     </tr></table>
    <span style="color:blue";><h4>최근 경기 기록</h4></span>
   <div style="background-color:white";>
